
RELEASE  VERSION/DATE TO BE FILLED IN LATER

  From Mathew Robinson:

    - Improved threading performance by ensuring NodeInfo is shared
      across threads. Results in ~13% improvement for parallel builds
      (-j# > 1) with many shared nodes.

  From Mats Wichmann
    - Replace instances of string find method with "in" checks where
      the index from find() was not used.
    - Turn previously deprecated debug options into failures.


RELEASE 3.1.1 - Mon, 07 Aug 2019 20:09:12 -0500

  From William Deegan:
    - Remove obsoleted references to DeciderNeedsNode which could cause crash when using --debug=explain

  From Jason Kenny
    - Add Fix and test for crash in 3.1.0 when using Decider('MD5-timestamp') and --debug=explain

  From Ben Reed:
    - Added -fmerge-all-constants to flags that get included in both CCFLAGS and LINKFLAGS.

  From Mathew Robinson:
    - Fix issue #3415 - Update remaining usages of EnvironmentError to SConsEnvironmentError
      this patch fixes issues introduced in 3.1.0 where any of the
      following would cause SCons to error and exit:
        - CacheDir not write-able
        - JSON encoding errors for CacheDir config
        - JSON decoding errors for CacheDir config


RELEASE 3.1.0 - Mon, 20 Jul 2019 16:59:23 -0700

  From Joseph Brill:
    - Code to supply correct version-specifier argument to vswhere for
      VS version selection.

  From William Deegan:
    - Enhanced --debug=explain output. Now the separate components of the dependency list are split up
      as follows:

      scons: rebuilding `file3' because:
           the dependency order changed:
           ->Sources
           Old:xxx	New:zzz
           Old:yyy	New:yyy
           Old:zzz	New:xxx
           ->Depends
           ->Implicit
           Old:/usr/bin/python	New:/usr/bin/python
    - Fix Issue #3350 - SCons Exception EnvironmentError is conflicting with Python's EnvironmentError.