@@ -67,7 +67,7 @@ env.Package( NAME           = 'foo',
              LICENSE        = 'gpl',
              SUMMARY        = 'balalalalal',
              X_RPM_GROUP    = 'Application/fu',
-             X_RPM_INSTALL  = r'%(_python_)s %(scons)s --debug=tree --install-sandbox="$RPM_BUILD_ROOT" "$RPM_BUILD_ROOT"',
+             X_RPM_INSTALL  = r'%(_python_)s %(scons)s --tree=all --install-sandbox="$RPM_BUILD_ROOT" "$RPM_BUILD_ROOT"',
              DESCRIPTION    = 'this should be really really long',
              source         = [ prog ],
              target         = "my_rpm_package.rpm",
